- minor improvements and version updates - compatible with OpenProject 17.2 - version 0.3.0